# ai-answer-ninja

./: .env  .env.dev  .env.example  AI-AVATAR-EXPERIMENT.md  API_DOCUMENTATION.md  AZURE-QUICK-DEPLOY.md  CLAUDE.md  CONTAINERIZATION-DEPLOYMENT-GUIDE.md  DEPLOYMENT-GUIDE.md  DEVELOPMENT_GUIDE.md  E2E-TESTING-GUIDE.md  MASTER-ARCHITECTURE-V4.md  MVP-ARCHITECTURE.md  MVP-AZURE-ARCHITECTURE.md  Makefile  PHASE1-DEPLOYMENT.md  README-DOCKER.md  SECURITY-IMPLEMENTATION-REPORT.md  basic-e2e-test.cjs  docker-compose.dev-simple.yml  docker-compose.dev.yml  docker-compose.e2e.yml  docker-compose.enhanced.yml  docker-compose.ha.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.production.yml  docker-compose.staging.yml  docker-compose.test.yml  docker-compose.yml  docker-fix-and-alternatives.md  integration-check.js  jest.config.js  local-e2e-cleanup.sh  local-e2e-setup.sh  package-lock.json  package.json  quick-test-services.cjs  quick-test-services.js  service-selection-analysis.md  (+6 more)
.claude/: settings.json
.claude/hooks/: complete_with_notification.sh  notify_completion.sh  simple_commit.sh  simple_notify.sh  smart_notify.sh  task_complete.sh
database/: README-DATABASE-OPTIMIZATION.md  README.md
deployment/: azure-integration-test.js  azure-services-config.yaml  database-init.sql  k8s-deployment.yaml
docker/: Dockerfile.golang-template  Dockerfile.load-tester  Dockerfile.nodejs-template  Dockerfile.python-template  Dockerfile.test-runner  phone-gateway.Dockerfile
docs/: README.md  SERVICE_COMMUNICATION.md
environments/: README.md
infrastructure/: README.md
k8s/: deploy.sh  service-discovery.yaml
monitoring/: MONITORING-OPERATIONS-GUIDE.md  README.md  docker-compose.monitoring.yml  health-check-system.ts  prometheus-dev.yml  prometheus.yml
scripts/: build-docker-images.sh  deploy-environment.sh  deploy.sh  dev-start.sh  phase1-deployment.ts  quick-test.sh  test-integration.js
services/conversation-analyzer/: Dockerfile  README.md  docker-compose.yml  k8s-deployment.yaml  pyproject.toml  requirements.txt
services/conversation-analyzer/app/: __about__.py  main.py
services/conversation-analyzer/app/api/v1/: analysis.py
services/conversation-analyzer/app/core/: cache.py  config.py  database.py  logging.py
services/conversation-analyzer/app/ml/analyzers/: conversation_analyzer.py
services/conversation-analyzer/app/models/: analysis.py
services/conversation-analyzer/app/pipelines/: realtime_processor.py
services/conversation-analyzer/app/services/: azure_speech.py  conversation_analyzer.py  effectiveness_evaluator.py  nlp_analyzer.py  service_client.py  summary_generator.py
services/conversation-analyzer/scripts/: start.sh
services/conversation-analyzer/tests/: conftest.py  test_api.py
services/conversation-engine/: .env.example  Dockerfile  Dockerfile.optimized  README.md  docker-compose.yml  k8s-deployment.yaml  main.py  pyproject.toml  requirements.txt
services/conversation-engine/app/: __init__.py
services/conversation-engine/app/api/v1/: __init__.py  analytics.py  conversation.py  engine.py  health.py
services/conversation-engine/app/core/: cache.py  config.py  database.py  logging.py
services/conversation-engine/app/models/: __init__.py  conversation.py  learning.py  user.py
services/conversation-engine/app/services/: __init__.py  azure_openai.py  sentiment_analyzer.py  state_manager.py
services/conversation-engine/core/: cache.py  config.py  database.py  logging.py
services/conversation-engine/models/: conversation.py  learning.py  user.py
services/conversation-engine/services/: __init__.py  azure_openai.py  conversation_manager.py  intent_classifier.py  learning_optimizer.py  learning_system.py  response_generator.py  sentiment_analyzer.py  state_manager.py  termination_manager.py
services/conversation-engine/tests/: test_ai_engine.py
services/profile-analytics/: .env.example  Dockerfile  Dockerfile.optimized  IMPLEMENTATION_SUMMARY.md  README.md  docker-compose.yml  k8s-deployment.yaml  main.py  package.json  pyproject.toml  requirements.txt  tsconfig.json
services/profile-analytics/app/: __init__.py
services/profile-analytics/app/api/: __init__.py
services/profile-analytics/app/api/v1/: analytics.py  health.py  profile.py
services/profile-analytics/app/core/: __init__.py  cache.py  config.py  database.py  logging.py
services/profile-analytics/app/middleware/: error_handler.py  monitoring.py
services/profile-analytics/app/models/: __init__.py  analytics.py  call_data.py  profile.py
services/profile-analytics/app/services/: __init__.py  cache_service.py  ml_service.py  privacy_service.py  profile_service.py  realtime_service.py
services/profile-analytics/ml/: __init__.py
services/profile-analytics/ml/features/: data_preprocessor.py  feature_extractor.py
services/profile-analytics/ml/models/: spam_classifier.py  user_profiler.py
services/profile-analytics/ml/pipelines/: __init__.py  batch_processor.py
services/profile-analytics/scripts/: start.sh
services/profile-analytics/src/: Dockerfile  README.md  index.ts
services/profile-analytics/src/analytics/: TrendAnalyzer.ts
services/profile-analytics/src/benchmark/: performance-benchmark.ts
services/profile-analytics/src/ml/: PredictiveModels.ts
services/profile-analytics/src/services/: AdvancedProfileService.ts  IntelligentRecommendationEngine.ts  RealtimeDataProcessor.ts
services/profile-analytics/src/test/: setup.ts
services/profile-analytics/src/types/: index.ts
services/profile-analytics/src/utils/: CacheManager.ts  Logger.ts
services/profile-analytics/tests/: __init__.py  conftest.py
services/profile-analytics/tests/unit/: test_feature_extractor.py  test_ml_service.py
shared/: README.md
tests/: docker-compose.test.yml  jest.config.js  jest.global-setup.ts  jest.global-teardown.ts  jest.setup.ts  package-lock.json  package.json  test-runner.ts  test.config.ts
(+739 files in other folders)
