[tool.poetry]
name = "conversation-engine"
version = "0.1.0"
description = "Advanced conversation management service for AI Answer Ninja"
authors = ["AI Answer Ninja Team"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"